fixed about page content distance on mobile device

--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -409,7 +409,7 @@
     }
 
     .ingredient-section {
-        margin-top: 80px;
+        margin-top: 100px;
     }
 
     .ingredient-section-info {
